# rust_random_stuff

./: Cargo.toml  README.md
src/: error.rs  lib.rs  ops.rs  result.rs
